--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "localheinz/factory-girl-definition",
-  "description": "Provides an interface and a finder for definitions with breerly/factory-girl-php.",
+  "description": "Provides an interface for, and an easy way to find and register entity definitions for breerly/factory-girl-php.",
   "type": "library",
   "license": "MIT",
   "authors": [
@@ -13,13 +13,21 @@
     "preferred-install": "dist",
     "sort-packages": true
   },
+  "minimum-stability": "beta",
+  "prefer-stable": true,
   "require": {
-    "php": "^5.6 || ^7.0"
+    "php": "^5.6 || ^7.0",
+    "zendframework/zend-file": "^2.7.1"
   },
   "require-dev": {
+    "breerly/factory-girl-php": "^1.0.0",
     "codeclimate/php-test-reporter": "0.4.4",
     "localheinz/php-cs-fixer-config": "1.2.1",
-    "phpunit/phpunit": "^5.7.20"
+    "phpunit/phpunit": "^5.7.20",
+    "refinery29/test-util": "^0.11.3"
+  },
+  "suggest": {
+    "breerly/factory-girl-php": "For creating a fixture factory the definitions can be used with."
   },
   "autoload": {
     "psr-4": {
