--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
   "require-dev": {
     "breerly/factory-girl-php": "^1.0.0",
     "codeclimate/php-test-reporter": "0.4.4",
-    "localheinz/php-cs-fixer-config": "1.2.1",
+    "localheinz/php-cs-fixer-config": "~1.4.0",
     "phpunit/phpunit": "^5.7.21",
     "refinery29/test-util": "^0.11.3"
   },
