--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     "sort-packages": true
   },
   "require": {
-    "php": "^5.6 || ^7.0",
+    "php": "^7.0",
     "zendframework/zend-file": "^2.7.1"
   },
   "require-dev": {
