--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
   "require-dev": {
     "breerly/factory-girl-php": "^1.0.0",
     "infection/infection": "~0.7.0",
+    "localheinz/composer-normalize": "^1.0.0",
     "localheinz/php-cs-fixer-config": "~1.14.0",
     "localheinz/test-util": "0.5.0",
     "phpunit/phpunit": "^6.5.5"
