--- a/.travis.yml
+++ b/.travis.yml
@@ -6,12 +6,14 @@ env:
 
 cache:
   directories:
+    - $HOME/.build/phpstan
     - $HOME/.build/phpunit
     - $HOME/.composer/cache
     - $HOME/.php-cs-fixer
 
 stages:
   - style
+  - stan
   - test
 
 jobs:
@@ -35,6 +37,25 @@ jobs:
       script:
         - composer normalize --dry-run
         - vendor/bin/php-cs-fixer fix --config=.php_cs --diff --dry-run --verbose
+
+    - stage: Stan
+
+      php: 7.3
+
+      before_install:
+        - source .travis/xdebug.sh
+        - xdebug-disable
+        - composer validate
+        - if [[ -n "$GITHUB_TOKEN" ]]; then composer config github-oauth.github.com $GITHUB_TOKEN; fi
+
+      install:
+        - composer install
+
+      before_script:
+        - mkdir -p $HOME/.build/phpstan
+
+      script:
+        - vendor/bin/phpstan analyse --configuration=phpstan.neon
 
     - &TEST
 
