--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
     "jangregor/phpstan-prophecy": "~0.2.0",
     "localheinz/composer-normalize": "^1.1.0",
     "localheinz/php-cs-fixer-config": "~1.19.0",
-    "localheinz/test-util": "0.5.0",
+    "localheinz/test-util": "~0.7.0",
     "phpstan/phpstan": "~0.10.8",
     "phpunit/phpunit": "^7.5.1"
   },
