--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,16 +1,17 @@
 includes:
+	- vendor/ergebnis/phpstan-rules/rules.neon
 	- vendor/jangregor/phpstan-prophecy/src/extension.neon
-	- vendor/localheinz/phpstan-rules/rules.neon
 	- vendor/phpstan/phpstan-deprecation-rules/rules.neon
 	- vendor/phpstan/phpstan-strict-rules/rules.neon
 	- vendor/phpstan/phpstan/conf/bleedingEdge.neon
 	- vendor/phpstan/phpstan/conf/config.levelmax.neon
 
 parameters:
-	classesAllowedToBeExtended:
-		- InvalidArgumentException
-		- Localheinz\FactoryGirl\Definition\AbstractDefinition
-		- RuntimeException
+	ergebnis:
+		classesAllowedToBeExtended:
+			- InvalidArgumentException
+			- Localheinz\FactoryGirl\Definition\AbstractDefinition
+			- RuntimeException
 	ignoreErrors:
 		- '#Method Localheinz\\FactoryGirl\\Definition\\Definition::accept\(\) has no return typehint specified\.#'
 		- '#Method Localheinz\\FactoryGirl\\Definition\\FakerAwareDefinition::provideWith\(\) has no return typehint specified\.#'
