--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
   ],
   "require": {
     "php": "^7.2",
-    "localheinz/classy": "0.3.0"
+    "ergebnis/classy": "~0.5.0"
   },
   "require-dev": {
     "breerly/factory-girl-php": "^1.0.3",
