--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
   ],
   "require": {
     "php": "^7.2",
-    "ergebnis/classy": "~0.5.0"
+    "ergebnis/classy": "~0.5.0",
+    "fzaninotto/faker": "^1.9.0"
   },
   "require-dev": {
     "breerly/factory-girl-php": "^1.0.3",
