--- a/phpstan-baseline.neon
+++ b/phpstan-baseline.neon
@@ -1,15 +1,6 @@
 
 
 parameters:
-	ignoreErrors:
-		-
-			message: "#^Method Localheinz\\\\FactoryGirl\\\\Definition\\\\Definition\\:\\:accept\\(\\) has no return typehint specified\\.$#"
-			count: 1
-			path: src/Definition.php
-
-		-
-			message: "#^Method Localheinz\\\\FactoryGirl\\\\Definition\\\\FakerAwareDefinition\\:\\:provideWith\\(\\) has no return typehint specified\\.$#"
-			count: 1
-			path: src/FakerAwareDefinition.php
+	ignoreErrors: []
 
 
