--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
   },
   "require-dev": {
     "ergebnis/composer-normalize": "^2.0.0",
-    "ergebnis/php-cs-fixer-config": "~1.0.0",
+    "ergebnis/php-cs-fixer-config": "^1.1.3",
     "ergebnis/phpstan-rules": "~0.14.0",
     "ergebnis/test-util": "~0.9.0",
     "infection/infection": "~0.14.2",
@@ -27,12 +27,17 @@
     "phpstan/phpstan": "~0.12.3",
     "phpstan/phpstan-deprecation-rules": "~0.12.0",
     "phpstan/phpstan-strict-rules": "~0.12.0",
-    "phpunit/phpunit": "^8.4.3"
+    "phpunit/phpunit": "^8.4.3",
+    "psalm/plugin-phpunit": "~0.8.0",
+    "vimeo/psalm": "^3.8.1"
   },
   "suggest": {
     "breerly/factory-girl-php": "For creating a fixture factory the definitions can be used with."
   },
   "config": {
+    "platform": {
+      "php": "7.2.25"
+    },
     "preferred-install": "dist",
     "sort-packages": true
   },
