--- a/phpstan-baseline.neon
+++ b/phpstan-baseline.neon
@@ -1,7 +1,3 @@
 parameters:
-	ignoreErrors:
-		-
-			message: "#^Parameter \\#1 \\$argument of class ReflectionClass constructor expects class\\-string\\<T of object\\>\\|T of object, string given\\.$#"
-			count: 1
-			path: src/Definitions.php
+	ignoreErrors: []
 
