--- a/phpstan.neon
+++ b/phpstan.neon
@@ -2,6 +2,7 @@ includes:
 	- phpstan-baseline.neon
 
 parameters:
+	checkMissingIterableValueType: false
 	ergebnis:
 		classesAllowedToBeExtended:
 			- Ergebnis\FactoryGirl\Definition\AbstractDefinition
