--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
   "require": {
     "php": "^7.2",
     "breerly/factory-girl-php": "^1.2.0",
-    "ergebnis/classy": "~0.5.2",
+    "ergebnis/classy": "^1.0.0",
     "fzaninotto/faker": "^1.9.1"
   },
   "require-dev": {
@@ -21,7 +21,7 @@
     "ergebnis/license": "^1.0.0",
     "ergebnis/php-cs-fixer-config": "^2.2.1",
     "ergebnis/phpstan-rules": "~0.15.0",
-    "ergebnis/test-util": "~0.9.1",
+    "ergebnis/test-util": "^1.0.0",
     "infection/infection": "~0.15.3",
     "jangregor/phpstan-prophecy": "~0.8.0",
     "phpstan/extension-installer": "^1.0.4",
