--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -79,7 +79,7 @@ repository:
   allow_merge_commit: true
   allow_rebase_merge: false
   allow_squash_merge: false
-  archived: false
+  archived: true
   default_branch: "main"
   delete_branch_on_merge: true
   description: ":girl: Provides an interface for, and an easy way to find and register entity definitions for breerly/factory-girl-php."
